# orphan-1.21.9x

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  _cmake_build.cmd  _cmake_config.cmd  _test_vs.cmd
Orphan-SRC-MC-1.21.9x/: .gitignore  CMakeLists.txt  README.md
Orphan-SRC-MC-1.21.9x/.github/workflows/: cmake-single-platform.yml
Orphan-SRC-MC-1.21.9x/include/ImGui/: CMakeLists.txt  imgui.h  imgui_draw.cpp
Orphan-SRC-MC-1.21.9x/src/: Orphan.cpp  Orphan.hpp  dllmain.cpp
Orphan-SRC-MC-1.21.9x/src/Features/: FeatureManager.cpp  FeatureManager.hpp
Orphan-SRC-MC-1.21.9x/src/Features/Auth/: Authorization.cpp  Authorization.hpp
Orphan-SRC-MC-1.21.9x/src/Features/Command/: CommandManager.cpp
Orphan-SRC-MC-1.21.9x/src/Features/Command/Commands/: BindCommand.hpp  BuildInfoCommand.cpp  ConfigCommand.cpp  ConfigCommand.hpp  HelpCommand.cpp  HelpCommand.hpp  TestCommand.cpp  TestCommand.hpp  ToggleCommand.hpp  UnbindCommand.hpp  VclipCommand.hpp
Orphan-SRC-MC-1.21.9x/src/Features/Configs/: ConfigManager.cpp  PreferenceManager.cpp  PreferenceManager.hpp
Orphan-SRC-MC-1.21.9x/src/Features/Events/: DrawImageEvent.hpp  PanoramaRenderEvent.hpp
Orphan-SRC-MC-1.21.9x/src/Features/GUI/: AuditDropdown.cpp  AuditDropdown.hpp  ModernDropdown.cpp  ModernDropdown.hpp  SimpleDropdown.cpp  SimpleDropdown.hpp
Orphan-SRC-MC-1.21.9x/src/Features/Modules/: Module.cpp  Module.hpp  ModuleManager.cpp  Setting.cpp  Setting.hpp
Orphan-SRC-MC-1.21.9x/src/Features/Modules/Combat/: Aura.cpp  Aura.hpp  AutoClicker.cpp  AutoClicker.hpp  Criticals.hpp  InfiniteAura.cpp  InfiniteAura.hpp  Reach.hpp  TriggerBot.hpp
Orphan-SRC-MC-1.21.9x/src/Features/Modules/Misc/: AutoQueue.cpp  AutoQueue.hpp  AutoVote.cpp  Desync.cpp  Disabler.cpp  Disabler.hpp  EditionFaker.cpp  Friends.cpp  Friends.hpp  HackerAlert.cpp  HackerAlert.hpp  NoFilter.cpp  NoFilter.hpp  PacketMine.cpp  PacketMine.hpp  SkinStealer.cpp  SkinStealer.hpp  TestModule.cpp  TestModule.hpp  ToggleSounds.cpp  ToggleSounds.hpp
Orphan-SRC-MC-1.21.9x/src/Features/Modules/Movement/: AirJump.hpp  AirSpeed.hpp  AutoPath.cpp  DamageBoost2.cpp  DamageBoost2.hpp  Fly.cpp  Fly.hpp  InventoryMove.cpp  InventoryMove.hpp  Jesus.cpp  Jesus.hpp  LongJump.hpp  Phase.cpp  Phase.hpp  ReverseStep.cpp  ReverseStep.hpp  Speed.cpp  Speed.hpp  Spider.cpp  Spider.hpp  Step.cpp  Step.hpp  TargetStrafe.cpp  TargetStrafe.hpp  Velocity.cpp  Velocity.hpp
Orphan-SRC-MC-1.21.9x/src/Features/Modules/Player/: ChestStealer.cpp  ChestStealer.hpp  Encaser.cpp  Encaser.hpp  Extinguisher.hpp  FastEat.cpp  FastMine.hpp  Freecam.cpp  Freecam.hpp  InvManager.cpp  InvManager.hpp  MidclickAction.hpp  Nuker.cpp  Nuker.hpp  OreMiner.cpp  OreMiner.hpp  Regen.cpp  Regen.hpp  Scaffold.cpp  Scaffold.hpp  Stripper.cpp  Stripper.hpp  Timer.hpp
Orphan-SRC-MC-1.21.9x/src/Features/Modules/Visual/: Arraylist.cpp  Arraylist.hpp  BlockESP.cpp  BlockESP.hpp  ChestESP.hpp  ClickGui.cpp  ClickGui.hpp  CustomChat.cpp  CustomChat.hpp  DamageEffect.cpp  DamageEffect.hpp  DestroyProgress.cpp  DestroyProgress.hpp  ESP.cpp  ESP.hpp  FullBright.cpp  Glint.hpp  HudEditor.cpp  Interface.cpp  Interface.hpp  ItemESP.cpp  ItemESP.hpp  LevelInfo.hpp  NameProtect.hpp  Nametags.cpp  Nametags.hpp  NoRender.cpp  NoRender.hpp  Notifications.cpp  Notifications.hpp  SessionInfo.cpp  SessionInfo.hpp  TargetHUD.cpp  TargetHUD.hpp  Tracers.hpp  UpdateForm.cpp  Watermark.cpp  Watermark.hpp  Zoom.cpp  Zoom.hpp
Orphan-SRC-MC-1.21.9x/src/Hook/: Hook.cpp  HookManager.cpp
Orphan-SRC-MC-1.21.9x/src/Hook/Hooks/ActorHooks/: NametagRenderHook.cpp  NametagRenderHook.hpp
Orphan-SRC-MC-1.21.9x/src/Hook/Hooks/MiscHooks/: KeyHook.cpp
Orphan-SRC-MC-1.21.9x/src/Hook/Hooks/NetworkHooks/: RakPeerHooks.cpp
Orphan-SRC-MC-1.21.9x/src/Hook/Hooks/RenderHooks/: D3DHook.cpp  PanoramaReplace.cpp  PanoramaReplace.hpp  SetupAndRenderHook.cpp  SetupAndRenderHook.hpp
Orphan-SRC-MC-1.21.9x/src/SDK/: OffsetProvider.cpp  OffsetProvider.hpp  SigManager.cpp  SigManager.hpp
Orphan-SRC-MC-1.21.9x/src/SDK/Minecraft/: ClientInstance.cpp  Options.hpp  mce.hpp
Orphan-SRC-MC-1.21.9x/src/SDK/Minecraft/Actor/: Actor.cpp  Actor.hpp  ActorType.hpp  EntityContext.hpp  SerializedSkin.hpp
Orphan-SRC-MC-1.21.9x/src/SDK/Minecraft/Actor/Components/: AttributesComponent.hpp
Orphan-SRC-MC-1.21.9x/src/SDK/Minecraft/Inventory/: ItemStack.hpp  PlayerInventory.cpp
Orphan-SRC-MC-1.21.9x/src/SDK/Minecraft/Network/Packets/: MobEffectPacket.hpp
Orphan-SRC-MC-1.21.9x/src/SDK/Minecraft/Rendering/: GuiData.hpp  LevelRenderer.cpp  LevelRenderer.hpp  MinecraftUIRenderContext.hpp
Orphan-SRC-MC-1.21.9x/src/SDK/Minecraft/World/: BlockLegacy.hpp
Orphan-SRC-MC-1.21.9x/src/Utils/: FileUtils.cpp  FileUtils.hpp  FontHelper.cpp  Logger.cpp  MessageTemplate.cpp  Resource.hpp  Resources.cpp  Resources.hpp
Orphan-SRC-MC-1.21.9x/src/Utils/GameUtils/: ChatUtils.cpp  ItemUtils.cpp  ItemUtils.hpp
Orphan-SRC-MC-1.21.9x/src/Utils/MiscUtils/: BlockUtils.cpp  BlockUtils.hpp  DataStore.hpp  ImRenderUtils.cpp  ImRenderUtils.hpp  NotifyUtils.hpp  SoundUtils.cpp
Orphan-SRC-MC-1.21.9x/src/Utils/SysUtils/: ExceptionHandler.cpp  ExceptionHandler.hpp  StackWalker.cpp
