cmake_minimum_required(VERSION 3.24)

project(Orphan LANGUAGES C CXX)

if(NOT WIN32)
    message(FATAL_ERROR "Orphan currently supports Windows builds only.")
endif()

if(CMAKE_SIZEOF_VOID_P EQUAL 4)
    message(FATAL_ERROR "Orphan only supports x64 builds.")
endif()

if(NOT MSVC)
    message(FATAL_ERROR "Orphan currently supports MSVC builds only.")
endif()

include(cmake/CPM.cmake)

option(ORPHAN_PRIVATE_BUILD "Enable private build flags." ON)
option(ORPHAN_GENERATE_BUILD_INFO "Generate build metadata header." ON)
option(ORPHAN_BUILD_SHADERS "Compile HLSL shaders via fxc.exe when available." ON)
option(ORPHAN_ENABLE_OPENMP "Enable OpenMP if available." ON)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_UNITY_BUILD TRUE)
set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")

CPMAddPackage(
    NAME spdlog
    GITHUB_REPOSITORY gabime/spdlog
    VERSION 1.9.2
)

CPMAddPackage(
    NAME magic_enum
    GITHUB_REPOSITORY Neargye/magic_enum
    VERSION 0.9.5
)

CPMAddPackage(
    NAME glm
    GITHUB_REPOSITORY g-truc/glm
    GIT_TAG 1.0.1
)

CPMAddPackage(
    NAME nlohmann_json
    GITHUB_REPOSITORY nlohmann/json
    VERSION 3.11.3
)

CPMAddPackage(
    NAME DirectXTK
    GITHUB_REPOSITORY microsoft/DirectXTK
    GIT_TAG main
)

CPMAddPackage(
    NAME cryptopp-cmake
    GITHUB_REPOSITORY abdes/cryptopp-cmake
    GIT_TAG master
)

CPMAddPackage(
    NAME curl
    GITHUB_REPOSITORY curl/curl
    GIT_TAG curl-8_11_1
    OPTIONS
        "BUILD_CURL_EXE OFF"
        "BUILD_TESTING OFF"
        "BUILD_SHARED_LIBS OFF"
        "CURL_USE_SCHANNEL ON"
        "CURL_USE_OPENSSL OFF"
        "CURL_ZLIB OFF"
        "USE_LIBIDN2 OFF"
        "USE_NGHTTP2 OFF"
        "USE_LIBPSL OFF"
        "HTTP_ONLY ON"
)

CPMAddPackage(
    NAME freetype
    GITHUB_REPOSITORY freetype/freetype
    GIT_TAG VER-2-13-2
    OPTIONS
        "FT_DISABLE_ZLIB ON"
        "FT_DISABLE_BZIP2 ON"
        "FT_DISABLE_PNG ON"
        "FT_DISABLE_BROTLI ON"
        "FT_DISABLE_HARFBUZZ ON"
)

function(orphan_make_resource_symbol relative_path out_var)
    string(REPLACE "/" "_" symbol_name "${relative_path}")
    string(REPLACE "." "_" symbol_name "${symbol_name}")
    string(REPLACE "-" "_" symbol_name "${symbol_name}")
    set(${out_var} "${symbol_name}" PARENT_SCOPE)
endfunction()

function(orphan_link_first_available target_name)
    set(found FALSE)
    foreach(candidate IN LISTS ARGN)
        if(TARGET "${candidate}")
            target_link_libraries(${target_name} PRIVATE "${candidate}")
            set(found TRUE)
            break()
        endif()
    endforeach()

    if(NOT found)
        string(REPLACE ";" ", " candidate_list "${ARGN}")
        message(FATAL_ERROR "Could not find any dependency target for ${target_name}: ${candidate_list}")
    endif()
endfunction()

set(orphan_generated_dir "${CMAKE_BINARY_DIR}/generated")
set(orphan_generated_utils_dir "${orphan_generated_dir}/Utils")
file(MAKE_DIRECTORY "${orphan_generated_utils_dir}")

file(
    GLOB_RECURSE orphan_resource_files
    LIST_DIRECTORIES FALSE
    RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}/resources"
    "${CMAKE_CURRENT_SOURCE_DIR}/resources/*"
)
list(SORT orphan_resource_files)

set(orphan_embedded_resources_cpp "${orphan_generated_utils_dir}/EmbeddedResources.cpp")
set(orphan_generated_resources_hpp "${orphan_generated_utils_dir}/Resources.hpp")
set(orphan_generated_resources_cpp "${orphan_generated_utils_dir}/Resources.cpp")

file(WRITE "${orphan_embedded_resources_cpp}" "// This file is generated by CMake. Do not edit it manually.\n#include <cstddef>\n\n")

foreach(relative_file IN LISTS orphan_resource_files)
    set(abs_file "${CMAKE_CURRENT_SOURCE_DIR}/resources/${relative_file}")
    if(IS_DIRECTORY "${abs_file}")
        continue()
    endif()

    orphan_make_resource_symbol("${relative_file}" resource_symbol)

    file(READ "${abs_file}" resource_hex HEX)
    string(LENGTH "${resource_hex}" resource_hex_length)
    math(EXPR resource_size "${resource_hex_length} / 2")
    string(REGEX MATCHALL ".." resource_bytes "${resource_hex}")

    set(resource_array_data "")
    set(resource_bytes_on_line 0)
    foreach(resource_byte IN LISTS resource_bytes)
        string(APPEND resource_array_data "0x${resource_byte}, ")
        math(EXPR resource_bytes_on_line "${resource_bytes_on_line} + 1")
        if(resource_bytes_on_line EQUAL 20)
            string(APPEND resource_array_data "\n    ")
            set(resource_bytes_on_line 0)
        endif()
    endforeach()

    file(APPEND "${orphan_embedded_resources_cpp}" "extern \"C\" {\n")
    file(APPEND "${orphan_embedded_resources_cpp}" "const unsigned char _binary_resources_${resource_symbol}[] = {\n    ${resource_array_data}\n};\n")
    file(APPEND "${orphan_embedded_resources_cpp}" "const std::size_t _binary_resources_${resource_symbol}_size = ${resource_size};\n")
    file(APPEND "${orphan_embedded_resources_cpp}" "}\n\n")
endforeach()

set(resources_hpp_content "// This file is generated by CMake. Do not edit it manually.\n")
string(APPEND resources_hpp_content "#pragma once\n")
string(APPEND resources_hpp_content "#include <string>\n")
string(APPEND resources_hpp_content "#include <unordered_map>\n")
string(APPEND resources_hpp_content "#include \"Utils/Resource.hpp\"\n\n")

foreach(relative_file IN LISTS orphan_resource_files)
    set(abs_file "${CMAKE_CURRENT_SOURCE_DIR}/resources/${relative_file}")
    if(IS_DIRECTORY "${abs_file}")
        continue()
    endif()
    orphan_make_resource_symbol("${relative_file}" resource_symbol)
    string(APPEND resources_hpp_content "LOAD_RESOURCE(${resource_symbol});\n")
endforeach()

string(APPEND resources_hpp_content "\n")
string(APPEND resources_hpp_content "class ResourceLoader {\n")
string(APPEND resources_hpp_content "public:\n")
string(APPEND resources_hpp_content "    static inline std::unordered_map<std::string, Resource> Resources;\n")
string(APPEND resources_hpp_content "    static void loadResources();\n")
string(APPEND resources_hpp_content "};\n")

file(WRITE "${orphan_generated_resources_hpp}" "${resources_hpp_content}")

set(resources_cpp_content "// This file is generated by CMake. Do not edit it manually.\n")
string(APPEND resources_cpp_content "#include \"Utils/Resources.hpp\"\n")
string(APPEND resources_cpp_content "#include \"Utils/FontHelper.hpp\"\n\n")
string(APPEND resources_cpp_content "void ResourceLoader::loadResources() {\n")
string(APPEND resources_cpp_content "    ImFontConfig font_config;\n")
string(APPEND resources_cpp_content "    font_config.FontBuilderFlags = ImGuiFreeTypeBuilderFlags_NoHinting;\n")

foreach(relative_file IN LISTS orphan_resource_files)
    set(abs_file "${CMAKE_CURRENT_SOURCE_DIR}/resources/${relative_file}")
    if(IS_DIRECTORY "${abs_file}")
        continue()
    endif()

    orphan_make_resource_symbol("${relative_file}" resource_symbol)

    if(relative_file MATCHES ".*/.*")
        get_filename_component(friendly_name "${relative_file}" NAME_WE)
    else()
        set(friendly_name "${relative_file}")
    endif()
    string(REPLACE "-" "_" friendly_name "${friendly_name}")
    string(TOLOWER "${friendly_name}" friendly_name)

    string(APPEND resources_cpp_content "    auto ${resource_symbol} = GET_RESOURCE(${resource_symbol});\n")
    string(APPEND resources_cpp_content "    Resources.emplace(\"${friendly_name}\", ${resource_symbol});\n")

    if(relative_file MATCHES ".*\\.ttf$")
        string(APPEND resources_cpp_content "    FontHelper::Fonts.emplace(\"${friendly_name}\", ImGui::GetIO().Fonts->AddFontFromMemoryTTF(${resource_symbol}.data2(), ${resource_symbol}.size(), 20, &font_config));\n")
        string(APPEND resources_cpp_content "    FontHelper::Fonts.emplace(\"${friendly_name}_large\", ImGui::GetIO().Fonts->AddFontFromMemoryTTF(${resource_symbol}.data2(), ${resource_symbol}.size(), 42, &font_config));\n")
    endif()
endforeach()

string(APPEND resources_cpp_content "}\n")

file(WRITE "${orphan_generated_resources_cpp}" "${resources_cpp_content}")

file(GLOB_RECURSE orphan_source_files CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
list(REMOVE_ITEM orphan_source_files "${CMAKE_CURRENT_SOURCE_DIR}/src/Utils/Resources.cpp")

set_source_files_properties(
    ${orphan_source_files}
    "${orphan_generated_resources_cpp}"
    "${orphan_embedded_resources_cpp}"
    PROPERTIES CXX_SCAN_FOR_MODULES OFF
)

add_library(
    Orphan
    SHARED
    ${orphan_source_files}
    "${orphan_generated_resources_cpp}"
    "${orphan_embedded_resources_cpp}"
)

if(ORPHAN_GENERATE_BUILD_INFO)
    add_custom_target(
        generate_build_info
        COMMAND
            ${CMAKE_COMMAND}
            -DORPHAN_SOURCE_DIR=${CMAKE_CURRENT_SOURCE_DIR}
            -DORPHAN_BINARY_DIR=${CMAKE_BINARY_DIR}
            -P ${CMAKE_CURRENT_SOURCE_DIR}/GenerateBuildInfo.cmake
        BYPRODUCTS "${CMAKE_BINARY_DIR}/build/build_info.h"
        COMMENT "Generating build metadata header"
        VERBATIM
    )
    add_dependencies(Orphan generate_build_info)
endif()

if(ORPHAN_BUILD_SHADERS)
    set(shader_dir "${CMAKE_CURRENT_LIST_DIR}/src/Utils/Shaders")
    set(shader_bin_dir "${CMAKE_BINARY_DIR}/OrphanShaders")
    set(hlsl_files_vs "${shader_dir}/BlockInstanceVS.hlsl")
    set(hlsl_files_ps "${shader_dir}/DefaultPS.hlsl")
    find_program(ORPHAN_FXC_EXECUTABLE NAMES fxc.exe fxc)

    if(ORPHAN_FXC_EXECUTABLE)
        file(MAKE_DIRECTORY "${shader_bin_dir}")
        set(shader_outputs "")

        foreach(shader_file IN LISTS hlsl_files_vs)
            get_filename_component(shader_name "${shader_file}" NAME_WE)
            set(shader_output "${shader_bin_dir}/${shader_name}.inc")
            add_custom_command(
                OUTPUT "${shader_output}"
                COMMAND ${ORPHAN_FXC_EXECUTABLE} /nologo /Evertex_main /T vs_5_0 /Zi /Fh "${shader_output}" /Fd "${CMAKE_BINARY_DIR}/${shader_name}.pdb" "${shader_file}"
                DEPENDS "${shader_file}"
                COMMENT "Compiling shader ${shader_name}.hlsl"
                VERBATIM
            )
            list(APPEND shader_outputs "${shader_output}")
        endforeach()

        foreach(shader_file IN LISTS hlsl_files_ps)
            get_filename_component(shader_name "${shader_file}" NAME_WE)
            set(shader_output "${shader_bin_dir}/${shader_name}.inc")
            add_custom_command(
                OUTPUT "${shader_output}"
                COMMAND ${ORPHAN_FXC_EXECUTABLE} /nologo /Epixel_main /T ps_5_0 /Zi /Fh "${shader_output}" /Fd "${CMAKE_BINARY_DIR}/${shader_name}.pdb" "${shader_file}"
                DEPENDS "${shader_file}"
                COMMENT "Compiling shader ${shader_name}.hlsl"
                VERBATIM
            )
            list(APPEND shader_outputs "${shader_output}")
        endforeach()

        if(shader_outputs)
            add_custom_target(OrphanShaders DEPENDS ${shader_outputs})
            add_dependencies(Orphan OrphanShaders)
        endif()

        target_include_directories(Orphan PRIVATE "${shader_bin_dir}")
    else()
        message(WARNING "fxc.exe was not found; shader include generation is disabled.")
    endif()
endif()

add_subdirectory(include/minhook)
add_subdirectory(include/libhat)
add_subdirectory(include/ImGui)
add_subdirectory(include/Kiero)
add_subdirectory(include/nes)

target_include_directories(
    Orphan
    PRIVATE
        "${orphan_generated_dir}"
        "${CMAKE_BINARY_DIR}"
        "${CMAKE_CURRENT_SOURCE_DIR}"
        "${CMAKE_CURRENT_SOURCE_DIR}/src"
        "${CMAKE_CURRENT_SOURCE_DIR}/include"
        "${CMAKE_CURRENT_SOURCE_DIR}/include/entt"
)

target_compile_definitions(
    Orphan
    PRIVATE
        NOMINMAX
        WIN32_LEAN_AND_MEAN
        JM_XORSTR_DISABLE_AVX_INTRINSICS
        ENTT_SPARSE_PAGE=2048
        ENTT_PACKED_PAGE=128
)

if(ORPHAN_PRIVATE_BUILD)
    target_compile_definitions(Orphan PRIVATE __PRIVATE_BUILD__)
endif()

target_compile_options(
    Orphan
    PRIVATE
        /bigobj
        $<$<CONFIG:Debug>:/Zi>
        $<$<CONFIG:Release>:/O2>
        $<$<CONFIG:Release>:/Oi>
        $<$<CONFIG:Release>:/GL>
        $<$<CONFIG:Release>:/Gy>
        $<$<CONFIG:Release>:/Gw>
        $<$<CONFIG:Release>:/GF>
        $<$<CONFIG:Release>:/fp:fast>
        $<$<CONFIG:Release>:/GR->
        $<$<CONFIG:Release>:/Ob2>
        $<$<CONFIG:Release>:/Ot>
        $<$<CONFIG:Release>:/Oy->
)

target_link_options(
    Orphan
    PRIVATE
        $<$<CONFIG:Debug>:/INCREMENTAL>
        $<$<CONFIG:Debug>:/DEBUG>
        $<$<CONFIG:Release>:/DEBUG>
        $<$<CONFIG:Release>:/INCREMENTAL:NO>
        $<$<CONFIG:Release>:/LTCG>
        $<$<CONFIG:Release>:/OPT:REF>
        $<$<CONFIG:Release>:/OPT:ICF>
)

orphan_link_first_available(Orphan spdlog::spdlog spdlog::spdlog_header_only spdlog)
orphan_link_first_available(Orphan nlohmann_json::nlohmann_json nlohmann_json)
orphan_link_first_available(Orphan glm::glm glm)
orphan_link_first_available(Orphan magic_enum::magic_enum magic_enum)
orphan_link_first_available(Orphan DirectXTK::DirectXTK DirectXTK)
orphan_link_first_available(Orphan cryptopp::cryptopp cryptopp-static cryptopp)
orphan_link_first_available(Orphan NES nuvola_event_system)
orphan_link_first_available(Orphan CURL::libcurl libcurl_static libcurl_shared libcurl)
orphan_link_first_available(Orphan Freetype::Freetype freetype)

target_link_libraries(
    Orphan
    PRIVATE
        minhook
        kiero
        libhat
        version
        dbghelp
        winmm
        d3d12
        d3d11
        d2d1
        dxgi
        dxguid
        dwrite
        comctl32
        ws2_32
        ole32
        Mmdevapi
)

if(ORPHAN_ENABLE_OPENMP)
    target_compile_options(Orphan PRIVATE /openmp)
endif()

if(TARGET DirectXTK)
    set_property(TARGET DirectXTK PROPERTY UNITY_BUILD FALSE)
endif()

if(TARGET minhook)
    set_property(TARGET minhook PROPERTY UNITY_BUILD FALSE)
endif()

target_precompile_headers(
    Orphan
    PRIVATE
        "$<$<COMPILE_LANGUAGE:CXX>:${CMAKE_CURRENT_SOURCE_DIR}/src/pch.hpp>"
)
